--- a/Rocketseat/Trilha Fundamentar/11/previewjs.html
+++ b/Rocketseat/Trilha Fundamentar/11/previewjs.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>Esse arquivo é só para que eu possa ver um arquivo.js pelo Console do Chrome (não encontrei um preview que eu soubesse usar ~_~)</p>
-    <script src="test.js"></script>
+    <script src="functions.js"></script>
 </body>
 </html>
