--- a/Next Level Week Expert 2024/theForm.html
+++ b/Next Level Week Expert 2024/theForm.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel=”stylesheet” href="theForm.css">
-    <script src="theForm.js"></script>
+    <title>NLW Expert 2024</title>
+    <link rel="stylesheet" href="./theForm.css">
 </head>
 <body>
     <main>
-        <h1>Teste seus conhecimentos!</h1>
-        <h2>Será que você sabe tanto quanto você pensa?</h2>
+        <header>
+            <img src="https://gist.githubusercontent.com/maykbrito/f47569e32fb2b21f2ecc9f4c035c141f/raw/a45997404564112d7596fbb1b9cad5de5521927e/logo.svg" alt="Logo NLW Expert 2024">
+            <h1>Teste seus conhecimentos!</h1>
+            <h2>Será que você sabe tanto quanto você pensa?</h2>
+        </header>
         <div id="quiz"></div>
         <template>
-            <div>
+            <div class="quiz-item">
                 <h3>Question 01</h3>
                 <dl>
                     <dt>
@@ -28,5 +30,6 @@
             <span>0 de 10</span>
         </div>
     </main>
+    <script src="./theForm.js"></script>
 </body>
 </html>
